--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Jogo da velha
+        Jogo da Velha
     </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="src/styles/estilo.css">
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <!--<img class="icon-logo-img" src="src/assets/icon-logo.jpg" alt="Jogador 1" width="50px" height="50px">-->
         <h1 class="tituloTxt">
-            BEM VINDOS AO JOGO DA VELHA <br> BOA SORTE E DIVIRTA-SE!!
+            BEM-VINDOS AO JOGO DA VELHA <br> BOA SORTE E DIVIRTA-SE!!
         </h1>
     </nav>
 
